edit: update empirical estimation

--- a/TeX/paper/soc_ext_paper.tex
+++ b/TeX/paper/soc_ext_paper.tex
@@ -228,10 +228,10 @@ Bundesliga is an independent body , sperated from the German Football Associatio
 
 
 \begin{align}
-	Crime_{rdmy} = \alpha + \beta Gameday_{rdmy} + \underbrace{\gamma_d +  \eta_m + \theta_y}_{date_{dmy}} + \vartheta_r + X_{rdmy} \lambda + \varepsilon_{rdmy}
+	\text{Crime}_{rdmy} = \alpha + \beta\ \text{Gameday}_{rdmy} + \underbrace{\gamma_d +  \eta_m + \theta_y}_{\text{date}_{dmy}} + \vartheta_r + X_{rdmy} \lambda + \varepsilon_{rdmy}
 	\label{eq_soc_ext:model}
 \end{align}
-with Crime is crime rate in region $r$, on day-of-the-week $d$, in month $m$ and year $y$. Number of assaults per 100,000 individuals times 365. $X_{rdmy}$ contains school and public holidays and weather controls.\newline
+with Crime$_{rdmy}$ is crime rate in region $r$, on day-of-the-week $d$, in month $m$ and year $y$. Number of assaults per 100,000 individuals times 365. $X_{rdmy}$ contains school and public holidays and weather controls.\newline
 
 \underline{What I did in the analysis:} 
 \begin{itemize}
